force-app/main/default/objects/Funding_Reconciliation__c/Funding_Reconciliation__c.object-meta.xml
<CustomObject>
    <description>Used to reconcile transactions with funding drawdown. Could be used for areas other than awards</description>
    <label>Funding Reconciliation</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Funding Award Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>