force-app/main/default/objects/Funding_Reconciliation__c/fields/Actuals_Payments_A_A_Variance__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Payments_A_A_Variance__c</fullName>
    <formula>Total_Funding_Actuals_A_A__c -  Total_Funding_Disbursement_A_A__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actuals Payments A&amp;A Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>