force-app/main/default/objects/Funding_Reconciliation__c/fields/Actuals_Payments_Capital_Variance__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Payments_Capital_Variance__c</fullName>
    <formula>Total_Funding_Actuals_Capital__c -  Total_Funding_Disbursement_Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actuals Payments Capital Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>