force-app/main/default/objects/Funding_Reconciliation__c/fields/Actuals_Payments_Variance__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Payments_Variance__c</fullName>
    <description>Difference between total constituent Actuals and Disbursements</description>
    <formula>Total_Funding_Actuals_Amount_Grant__c -  Total_Funding_Disbursement_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actuals Payments Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>