force-app/main/default/objects/Funding_Reconciliation__c/fields/Actuals_Payments_Variance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Payments_Variance_Notes__c</fullName>
    <description>Commentary on difference between total actuals and variables</description>
    <label>Actuals Payments Variance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>