force-app/main/default/objects/Funding_Reconciliation__c/fields/Adjustment_Required__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Required__c</fullName>
    <description>Records whether an adjustment has been required irrelevant of the status over time</description>
    <label>Adjustment Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>