force-app/main/default/objects/Funding_Reconciliation__c/fields/Award_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Award_Record_Type_Name__c</fullName>
    <formula>Funding_Award__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Record Type Name</label>
    <type>Text</type>
</CustomField>