force-app/main/default/objects/Funding_Reconciliation__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <description>Date that reconciliation was approved</description>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>