force-app/main/default/objects/Funding_Reconciliation__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Date Reconciliation was submitted</description>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>