force-app/main/default/objects/Funding_Reconciliation__c/fields/Final_Reconciliation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Reconciliation_Amount__c</fullName>
    <formula>IF(  CONTAINS(Award_Record_Type_Name__c, &apos;SHF&apos;)  ,  Transaction_Payment_Variance__c ,  (Actuals_Payments_Variance__c -  Preceding_Adjustment_Amount__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Reconciliation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>