force-app/main/default/objects/Funding_Reconciliation__c/fields/Last_Reconciled_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Reconciled_By__c</fullName>
    <defaultValue>&apos;User&apos;</defaultValue>
    <label>Last Reconciled By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Actuals</fullName>
            </value>
            <value>
                <fullName>Disbursements</fullName>
            </value>
            <value>
                <fullName>Reconciliations</fullName>
            </value>
            <value>
                <fullName>Grant Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>