force-app/main/default/objects/Funding_Reconciliation__c/fields/Last_Reconciliation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reconciliation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date that a last reconciliation process was run</description>
    <label>Last Reconciliation Date</label>
    <type>Date</type>
</CustomField>