force-app/main/default/objects/Funding_Reconciliation__c/fields/Parent_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Reconciliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to parent reporting period e.g QTR &gt; FY, FY &gt; Scheme etc</description>
    <label>Parent Reconciliation</label>
    <referenceTo>Funding_Reconciliation__c</referenceTo>
    <relationshipLabel>Child Reconciliations</relationshipLabel>
    <relationshipName>Funding_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>