force-app/main/default/objects/Funding_Reconciliation__c/fields/Percentage_Transactions_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Transactions_Reconciled__c</fullName>
    <formula>(Total_Reconciled_Transaction_Records__c  / Total_Transaction_Records__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Transactions Reviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>