force-app/main/default/objects/Funding_Reconciliation__c/fields/Preceding_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Preceding_Adjustment_Amount__c</fullName>
    <formula>Preceding_Funding_Adjustment__r.Outstanding_Adjustment_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preceding Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>