force-app/main/default/objects/Funding_Reconciliation__c/fields/Preceding_Funding_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Preceding_Funding_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Funding Adjustment created in previous Financial Year</description>
    <label>Preceding Funding Adjustment</label>
    <referenceTo>Funding_Adjustment__c</referenceTo>
    <relationshipLabel>Subsequent Funding Reconciliations</relationshipLabel>
    <relationshipName>Funding_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>