force-app/main/default/objects/Funding_Reconciliation__c/fields/Reconciliation_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Period_End__c</fullName>
    <label>Reconciliation Period End</label>
    <type>Date</type>
</CustomField>