force-app/main/default/objects/Funding_Reconciliation__c/fields/Reconciliation_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Period_Start__c</fullName>
    <label>Reconciliation Period Start</label>
    <type>Date</type>
</CustomField>