force-app/main/default/objects/Funding_Reconciliation__c/fields/Reconciliation_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Period_Type__c</fullName>
    <label>Reconciliation Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Financial Year</fullName>
            </value>
            <value>
                <fullName>Award</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Scheme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>