force-app/main/default/objects/Funding_Reconciliation__c/fields/Related_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Related_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Adjustment required for this reconciliation</description>
    <label>Related Adjustment</label>
    <referenceTo>Funding_Adjustment__c</referenceTo>
    <relationshipLabel>Funding Reconciliations</relationshipLabel>
    <relationshipName>Parent_Reconciliation</relationshipName>
    <type>Lookup</type>
</CustomField>