force-app/main/default/objects/Funding_Reconciliation__c/fields/Running_Transaction_Total__c.field-meta.xml
<CustomField>
    <fullName>Running_Transaction_Total__c</fullName>
    <formula>BLANKVALUE(Running_Transaction_Total_Grant__c,0) +  BLANKVALUE(Running_Transaction_Total_Co_funding__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running Transaction Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>