force-app/main/default/objects/Funding_Reconciliation__c/fields/Running_Transaction_Total_Capital__c.field-meta.xml
<CustomField>
    <fullName>Running_Transaction_Total_Capital__c</fullName>
    <description>Summarises ongoing capital transaction total</description>
    <label>Running Transaction Total - Capital</label>
    <summarizedField>Funding_Transaction__c.Grant_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Reviewed, Summarised</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Transaction__c.Funding_Reconciliation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>