force-app/main/default/objects/Funding_Reconciliation__c/fields/Running_Transaction_Total_Co_funding__c.field-meta.xml
<CustomField>
    <fullName>Running_Transaction_Total_Co_funding__c</fullName>
    <description>Summarises ongoing co-funding transaction total</description>
    <label>Running Transaction Total - Co-funding</label>
    <summarizedField>Funding_Transaction__c.Co_funding_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Reconciled, Summarised, Reviewed, Summarised</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Transaction__c.Funding_Reconciliation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>