force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Co_funding_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_funding_Transaction_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total co-funding amount from child transaction records</description>
    <label>Total Co-funding Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>