force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Funding_Actuals_A_A__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Actuals_A_A__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Summary of all child Records A&amp;A values</description>
    <label>Total Funding Actuals A&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>