force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Funding_Actuals_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Actuals_Amount__c</fullName>
    <formula>BLANKVALUE( Total_Funding_Actuals_Amount_Grant__c , 0) +  BLANKVALUE( Total_Funding_Actuals_Amount_Co_Funding__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funding Actuals Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>