force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Funding_Actuals_Amount_Co_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Actuals_Amount_Co_Funding__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount of co-funding recorded by G=rant Recipeint on</description>
    <label>Total Funding Actuals Amount Co-Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>