force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Funding_Actuals_Amount_Grant__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Actuals_Amount_Grant__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount of Grant money Grant Recipient had reported as Actuals during the reconciliation period</description>
    <label>Total Funding Actuals Amount Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>