force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Funding_Actuals_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Actuals_Capital__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Summary of child records Actual capital records</description>
    <label>Total Funding Actuals Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>