force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Funding_Disbursement_A_A__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Disbursement_A_A__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total of child records disbursement A&amp;A fields</description>
    <label>Total Funding Disbursement A&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>