force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Funding_Disbursement_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Disbursement_Capital__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total of all child Records disbursement values</description>
    <label>Total Funding Disbursement Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>