force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Funding_Drawdown_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Drawdown_Requested_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount of money Grant Recipient had requested and approved during Reconciliation period</description>
    <label>Total Funding Drawdown Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>