force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Reconciled_Transaction_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Reconciled_Transaction_Records__c</fullName>
    <description>Total number of child Transaction Records with status of reconciled</description>
    <label>Total Reviewed Transaction Records</label>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Reviewed, Summarised</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Transaction__c.Funding_Reconciliation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>