force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Transaction_Amount__c</fullName>
    <formula>Total_Co_funding_Transaction_Amount__c + Total_Grant_Transaction_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>