force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Transaction_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Transaction_Records__c</fullName>
    <description>Total number of child Transaction Records</description>
    <label>Total Transaction Records</label>
    <summaryForeignKey>Funding_Transaction__c.Funding_Reconciliation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>