force-app/main/default/objects/Funding_Reconciliation__c/fields/Total_Transactions_Evidence_Provided__c.field-meta.xml
<CustomField>
    <fullName>Total_Transactions_Evidence_Provided__c</fullName>
    <description>Provides total of transactions that have had evidence provided</description>
    <label>Total Transactions Evidence Provided</label>
    <summarizedField>Funding_Transaction__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Evidence_Attached__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Transaction__c.Funding_Reconciliation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>