force-app/main/default/objects/Funding_Reconciliation__c/fields/Transaction_Actuals_Variance__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Actuals_Variance__c</fullName>
    <formula>Total_Transaction_Amount__c -  Total_Funding_Actuals_Amount_Grant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Actuals Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>