force-app/main/default/objects/Funding_Reconciliation__c/fields/Transactions_Actuals_Variance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transactions_Actuals_Variance_Notes__c</fullName>
    <label>Transactions Actuals Variance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>