force-app/main/default/objects/Funding_Reconciliation__c/fields/Trigger_Flow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers automated flow to continuously create record conciliation records</description>
    <label>Trigger Flow</label>
    <type>Checkbox</type>
</CustomField>