force-app/main/default/objects/Funding_Reconciliation__c/fields/Unreconciled_Total__c.field-meta.xml
<CustomField>
    <fullName>Unreconciled_Total__c</fullName>
    <description>Amount of unreconciled transactions</description>
    <label>Unreconciled Total</label>
    <summarizedField>Funding_Transaction__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Reconciled</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Transaction__c.Funding_Reconciliation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>