force-app/main/default/objects/Funding_Reconciliation__c/listViews/All_Funding_Reconciliatios.listView-meta.xml
<ListView>
    <fullName>All_Funding_Reconciliatios</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Parent_Reconciliation__c</columns>
    <columns>Reconciliation_Period_Type__c</columns>
    <columns>Reconciliation_Period_Start__c</columns>
    <columns>Reconciliation_Period_End__c</columns>
    <columns>Running_Transaction_Total_Grant__c</columns>
    <columns>Running_Transaction_Total_Co_funding__c</columns>
    <columns>Running_Transaction_Total__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Grant_Transaction_Amount__c</columns>
    <columns>Total_Co_funding_Transaction_Amount__c</columns>
    <columns>Total_Transaction_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Funding Reconciliations</label>
</ListView>